# computed_tomography_pipeline

./: .gitignore  LICENSE  README.md  main.py  profile.prof  pyproject.toml  test.py
angle_resolver/: abstract_angle_resolver.py  simulator_angle_resolver.py
computed_tomography_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
computed_tomography_pipeline/angle_resolver/: abstract_angle_resolver.py  simulator_angle_resolver.py
computed_tomography_pipeline/computed_tomography_pipeline.egg-info/: SOURCES.txt  top_level.txt
computed_tomography_pipeline/ct_pipeline/: __init__.py  abstract_xray_pipeline.py  simulator_ct_pipeline.py  simulator_xray_pipeline.py
computed_tomography_pipeline/field_resolver/: __init__.py  abstract_field_resolver.py
computed_tomography_pipeline/image_cache/: simulator_image_cache.py
computed_tomography_pipeline/image_preprocessor/: abstract_image_preprocessor.py
computed_tomography_pipeline/object_reconstructor/: __init__.py  simulator_object_reconstructor.py
computed_tomography_pipeline/simulator/: abstract_simulator.py  simple_simulator.py
computed_tomography_pipeline/xray_controller/: abstract_xray_controller.py  simulator_xray_controller.py
ctp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ctp/field_resolver/: simulator_field_resolver.py
ctp/image_preprocessor/: simulator_image_preprocessor.py
ctp/motor_controller/: abstract_motor_controller.py  simulator_motor_controller.py
ctp/object_reconstructor/: abstract_object_reconstructor.py
ctp/xray_controller/: abstract_xray_controller.py
example_usage/: cnn_model.py  custom_datasets.py  expand_dataset.py  process_dataset.py  test_model.py  train_model.py
field_resolver/: abstract_field_resolver.py  simulator_field_resolver.py
image_cache/: abstract_image_cache.py  simulator_image_cache.py
image_preprocessor/: abstract_image_preprocessor.py  simulator_image_preprocessor.py
metrics/: old_metrics.py
motor_controller/: abstract_motor_controller.py  simulator_motor_controller.py
object_reconstructor/: abstract_object_reconstructor.py  simulator_object_reconstructor.py
simulator/: __init__.py  abstract_simulator.py  simple_simulator.py
tests/: test_execution.py  test_expand_and_skip.py  test_results.py  test_simulator.py
xray_controller/: abstract_xray_controller.py  simulator_xray_controller.py
xray_pipeline/: abstract_xray_pipeline.py  simulator_xray_pipeline.py
xrayp/: __init__.py
xrayp/angle_resolver/: __init__.py  simulator_angle_resolver.py
xrayp/image_cache/: __init__.py  abstract_image_cache.py  simulator_image_cache.py
xrayp/image_preprocessor/: abstract_image_preprocessor.py
xrayp/simulator/: abstract_simulator.py  simple_simulator.py
xrayp/xray_controller/: __init__.py  simulator_xray_controller.py
xrayp/xray_pipeline/: __init__.py  abstract_xray_pipeline.py  simulator_xray_pipeline.py
