[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ctp"
version = "1.0.0.dev1"
authors = [
  { name="Kaan Buyukdemirci", email="kaanbuyukdemirci2023@gmail.com" },
]
maintainers = [
  {name = "Kaan Buyukdemirci", email = "kaanbuyukdemirci2023@gmail.com"}
]
description = "A package for x-ray and ct image processing"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["matplotlib","numpy","opencv-python","scikit-image","scipy","tqdm","pydicom","torch","torchvision"]

[tool.setuptools]
packages = ["ctp"]

[project.urls]
Homepage = "https://github.com/kaanbuyukdemirci/xray_pipeline"
Issues = "https://github.com/kaanbuyukdemirci/xray_pipeline/issues"