[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "computed_tomography_pipeline"
version = "1.0.0.b1"
authors = [
  { name="Kaan Buyukdemirci", email="kaanbuyukdemirci2023@gmail.com"},
]
maintainers = [
  {name = "Kaan Buyukdemirci", email = "kaanbuyukdemirci2023@gmail.com"}
]
description = "A package for computed tomography image processing"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["matplotlib","numpy","opencv-python","scikit-image","scipy","tqdm","pydicom","torch","torchvision",
"h5py", "scikit-image"]

[tool.setuptools]
packages = ["computed_tomography_pipeline", "computed_tomography_pipeline.angle_resolver", 
"computed_tomography_pipeline.ct_pipeline", "computed_tomography_pipeline.field_resolver", 
"computed_tomography_pipeline.image_cache", "computed_tomography_pipeline.image_preprocessor", 
"computed_tomography_pipeline.motor_controller", "computed_tomography_pipeline.object_reconstructor", 
"computed_tomography_pipeline.simulator", "computed_tomography_pipeline.xray_controller"]

[project.urls]
Homepage = "https://github.com/kaanbuyukdemirci/computed_tomography_pipeline"
Issues = "https://github.com/kaanbuyukdemirci/computed_tomography_pipeline/issues"